Fix sizing of form elements on smaller screens

--- a/src/styles/Dropdown.css
+++ b/src/styles/Dropdown.css
@@ -42,7 +42,7 @@
 }
 
 main .dropdown-menu {
-	width: 80%;
+	width: 90%;
 	min-width: 33vw;
 	border: .1rem solid aliceblue;
 	background-color: var(--main);
