--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -179,9 +179,25 @@ textarea {
     gap: 1rem;
   }
 
+  label {
+    width: 100%;
+  }
+
+  button {
+    padding: 5px 8px;
+  }
+
   .document {
     width: 85vw;
+  }
+
+  .document.top > div {
     padding: 1rem;
+  }
+
+  nav + div div,
+  nav + div {
+    flex-wrap: wrap;
   }
 
   .time-place-container li {
